[gd_scene load_steps=6 format=2]

[ext_resource path="res://alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://itemUi.gd" type="Script" id=2]
[ext_resource path="res://Music/fx/cha-ching.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_right = 384.0
margin_bottom = 128.0
rect_min_size = Vector2( 752, 128 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.021
anchor_bottom = 1.0
margin_right = 0.208008
color = Color( 0.596078, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -24.0
margin_bottom = -16.0
rect_min_size = Vector2( 744.168, 96 )
color = Color( 0.407843, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ColorRect2"]
anchor_left = -0.021
anchor_top = -0.167
anchor_right = 1.0
anchor_bottom = 1.167
margin_left = 31.792
margin_top = 16.032
margin_right = -16.0
margin_bottom = -16.032
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_right = 204.0
margin_bottom = 96.0
rect_min_size = Vector2( 204, 96 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "[ITEM NAME]"
valign = 1

[node name="spacer" type="Label" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_left = 208.0
margin_right = 328.0
margin_bottom = 96.0
rect_min_size = Vector2( 120, 96 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "            "
valign = 1

[node name="name2" type="Label" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_left = 332.0
margin_right = 428.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "[COST]"
valign = 1

[node name="spacer2" type="Label" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_left = 432.0
margin_right = 562.0
margin_bottom = 96.0
rect_min_size = Vector2( 130, 96 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "             "
valign = 1

[node name="Button" type="Button" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_left = 566.0
margin_right = 712.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ColorRect/ColorRect2/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 156, 96 )
custom_fonts/font = SubResource( 2 )
text = "BUY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chaching" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 11.718
pitch_scale = 1.75
[connection signal="pressed" from="ColorRect/ColorRect2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
